--- a/src/server/config.yaml
+++ b/src/server/config.yaml
@@ -10,5 +10,5 @@ certs:
   NobodyKeyFile: ../../.config/nobody-key.pem
   ACLModelFile: ../../.config/model.conf
   ACLPolicyFile: ../../.config/policy.csv
-server:
-  Address: 127.0.0.1:0
+servers:
+  - Address: 127.0.0.1:0
