--- a/src/server/config.yaml
+++ b/src/server/config.yaml
@@ -1,14 +1,16 @@
 # Config used only for server_test.go
 ---
 certs:
-  CAFile: ../../.config/ca.pem
-  ServerCertFile: ../../.config/server.pem
-  ServerKeyFile: ../../.config/server-key.pem
-  UserCertFile: ../../.config/user.pem
-  UserKeyFile: ../../.config/user-key.pem
-  NobodyCertFile: ../../.config/nobody.pem
-  NobodyKeyFile: ../../.config/nobody-key.pem
-  ACLModelFile: ../../.config/model.conf
-  ACLPolicyFile: ../../.config/policy.csv
+  ca_file: ../../.config/ca.pem
+  server_cert_file: ../../.config/server.pem
+  server_key_file: ../../.config/server-key.pem
+  client_cert_file: ../../.config/client.pem
+  client_key_file: ../../.config/client-key.pem
+  user_cert_file: ../../.config/user.pem
+  user_key_file: ../../.config/user-key.pem
+  nobody_cert_file: ../../.config/nobody.pem
+  nobody_key_file: ../../.config/nobody-key.pem
+  acl_model_file: ../../.config/model.conf
+  acl_policy_file: ../../.config/policy.csv
 servers:
-  - Address: 127.0.0.1:0
+  - address: 127.0.0.1:0
